Import of PERLANCAR/Desktop-Detect-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: Desktop-Detect
gitpan-cpan-version:      0.02
gitpan-cpan-path:         PERLANCAR/Desktop-Detect-0.02.tar.gz
gitpan-cpan-author:       PERLANCAR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Desktop-Detect
 
+0.02    2014-11-22 (PERLANCAR)
+
+        - Detect gnome, lxde, openbox, cinnamon.
+
+
 0.01    2014-11-22 (PERLANCAR)
 
         - First release, only support xfce & kde-plasma.
