--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Desktop-Detect
 
+0.03    2015-01-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- Rebuild (Generate TODO.md).
+
+
 0.02    2014-11-22 (PERLANCAR)
 
         - Detect gnome, lxde, openbox, cinnamon.
